--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@
 DB_ADMIN_HOST=localhost
 DB_ADMIN_USER=root
 DB_ADMIN_PASSWORD=thecoloris123
+DB_ADMIN_DATABASE=lorrydoctor_db
 URL_ADMIN_PATH=static
