--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mysql": "^2.18.1",
     "node.js": "^0.0.1-security",
     "nodemon": "^2.0.7",
+    "openssl": "^1.1.0",
     "redis": "^3.0.2",
     "sha256": "^0.2.0"
   }
